2022-01-12  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: enable floating point computations

2022-01-10  Matteo Corti  <matteo@corti.li>

        * .github/workflows/test.yml (jobs): Removed Ubuntu 20.10
        * Makefile (dist): Disable extended attributes support with bsdtar

2021-12-21  Matteo Corti  <matteo@corti.li>

        * Converted several documents to Markdown

2021-12-20  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): Fixed a problem with self signed certificates
        * check_ssl_cert (main): Better --info output by missing fields

2021-12-16  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (parse_command_line_options): Remove the trailing . from FQDNs

2021-12-15  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (fetch_certificate): check if the used protocol was HTTP/2 (if requested)

2021-12-10  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): using NMAP_BIN instead of nmap
        * check_ssl_cert (main): fixed a bug causing an unnecessary scan when checking for disallowed protocols
        * check_ssl_cert (main): (main): SSL 2.0 and SSL 3.0 disabled by --all and --all-local

2021-12-08  Matteo Corti  <matteo@corti.li>

        * Fixed several spelling mistakes

2021-12-05 Bernd Stroessenreuther <booboo@gluga.de>

	* check_ssl_cert: improve readability of --help by wrapping some very long lines

2021-12-03  Matteo Corti  <corti@ubuntu-2110>

	* check_ssl_cert (main): IPv6 checks fixed if ipconfig is not available

2021-11-26  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (info): --info to print certificate information

2021-11-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): Fixed a bug in the processing of error messages
        * check_ssl_cert (main): Handle root certificates in DER format
        * check_ssl_cert (check_attr): Fixed the nmap cipher check for hosts which are not discoverable
