@@ -1,1 +1,1 @@
-Use the same numnber format for the perfomance data as the given critical or warning values (e.g., rational numbers)
+Added input validation for integers and floats
