@@ -1,3 +1,7 @@
+2022-01-13  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert (check_integer): Added input validation for integers and floats
+
 2022-01-12  Matteo Corti  <matteo@corti.li>
 
         * check_ssl_cert: enable floating point computations
